database details + new Content asset

--- a/html/create.html
+++ b/html/create.html
@@ -96,6 +96,7 @@ $(document).ready(function(){
           <option value="image" name="image" /> Image </option>
           <option value="carousel" name="carousel" /> Carousel </option>
           <option value="avatar" name="avatar" /> Avatar </option>
+          <option value="newsitem" name="newsitem" /> News Item </option>
         </select>
         
 
